add some html css:

--- a/index.html
+++ b/index.html
@@ -2,14 +2,50 @@
 <html lang="en">
 
 <head>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tribute Page</title>
+  <title>Tribute to Steve Jobs</title>
 </head>
 
 <body>
-  <h1>Hello World</h1>
+  <main id="main">
+    <div id="heading" class="center">
+      <h1 id="title" class="center">Steve Jobs</h1>
+      <p class="font"><i>The man who loved innovation</i></p>
+    </div>
+    <div id="img-div">
+      <img class="center" id=image src="images/Marvel_logo.png" alt="Steve Jobs with his Macintosh">
+      <div class="center"><br>
+        <p id="img-caption" class="font">Steve Jobs in his 20's with early version of Macintosh</p><br>
+      </div>
+    </div>
+
+    <div id="tribute-info" class="center">
+      <h2 class="font">Here's a time-line of Steve Job's life:</h2>
+      <ul class="font" style="text-align: justify;">
+        <br>
+
+        <br>
+      </ul>
+    </div>
+
+    <div class="center">
+      <p class="font"><i>I was lucky to get into computers when it was a very young and idealistic industry. There
+          weren't many degrees offered in computer science, so people in computers were brilliant people from
+          mathematics, physics, music, zoology, whatever. They loved it, and no one was really in it for the money...
+          There are people around here who start companies just to make money, but the great companies, well, that's not
+          what they're about."</i>
+        —Steve Jobs</p>
+      <br>
+      <h3 class="font">You can learn more about this incredible man on
+        <a href="https://en.wikipedia.org/wiki/Steve_Jobs" id="tribute-link" target="_blank">
+          Wikipedia.</a>
+      </h3>
+    </div>
+
+  </main>
+
 </body>
 
 </html>
