--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
       <h2 class="font">Here's a time-line of Steve Job's life:</h2>
       <ul class="font" style="text-align: justify;">
         <br>
-
+        <li><b>1971x</b>- Shortly after the third issue of Marvel Feature, the team was promoted to its own comic with The Defenders.</li>
+				<br>
+				<li><b>1972</b> - under writer Steve Englehart and artist Sal Buscema. Team members—including a returning Silver Surfer—rotated frequently, and Dr. Strange operated as a de facto leader, with the team using his Greenwich Village brownstone as its headquarters. The team gained its first new “regular” team member, the Asgardian warrior Valkyrie, in The Defenders</li>
+				<br>
+				<li><b>1975</b> - the comic entered its most memorable era. Gerber pitted the team—now reduced to a nucleus of Hulk, Dr. Strange, Valkyrie, and Nighthawk—against a group of deviant scientists known as the Headmen. One of them had his head transplanted onto the body of a gorilla, while another’s head was a large ruby-red sphere. Other foes included a celestial mind-control cult called the Bozos and an elf with a gun. Fans were by turns amazed, amused, and bemused. Gerber left the comic after issue no.</li>
         <br>
       </ul>
     </div>
